--- a/covid2019.html
+++ b/covid2019.html
@@ -33,6 +33,13 @@
   <h2>CoViD-19 Malaysia by States</h2>
 	  <p>[STATS: <span id="datetime"></span>]</p>
 
+	  <p class="codepen" data-height="265" data-theme-id="light" data-default-tab="html,result" data-user="maggiben" data-slug-hash="AylDH" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="Dashboard Header">
+  <span>See the Pen <a href="https://codepen.io/maggiben/pen/AylDH">
+  Dashboard Header</a> by Benjamin (<a href="https://codepen.io/maggiben">@maggiben</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+	  
 <script>
 var dt = new Date();
 document.getElementById("datetime").innerHTML = dt.toLocaleString();
