--- a/covid2019.html
+++ b/covid2019.html
@@ -37,15 +37,25 @@ var dt = new Date();
 document.getElementById("datetime").innerHTML = dt.toLocaleString();
 </script>
 <br>
-	  <iframe title="Updated: CoVID-19 in Malaysia by States" aria-label="Dot Plot" id="datawrapper-chart-AT19Z" src="//datawrapper.dwcdn.net/AT19Z/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 95% !important; border: none;" height="415"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+	  <div class="container-fluid">
+  <div class="row">
+    <div class="col" style="background-color:lavender;">
+    <iframe title="Updated: CoVID-19 in Malaysia by States" aria-label="Dot Plot" id="datawrapper-chart-AT19Z" src="//datawrapper.dwcdn.net/AT19Z/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="415"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+</script></div>
+    
+    <div class="col" style="background-color:white;">
+    <iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" id="datawrapper-chart-5Fzxn" src="//datawrapper.dwcdn.net/5Fzxn/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="415"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 </script>
+</div>
+  </div>
+</div>
 	  <br>
 	  <div class='tableauPlaceholder' id='viz1584894161338' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FK&#47;FK7NXWQCY&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;FK7NXWQCY' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FK&#47;FK7NXWQCY&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1584894161338');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 	  <br><h3>Heatmap CoViD-19 Malaysia by States</h3>
   <iframe width="95%" height="604" src="//jsfiddle.net/booluckgmie/8ptgj6yr/8/embedded/result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
-	  <p>Source: CPRC Kebangsaan, KKM</p><br>
+	  <p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
   <iframe class="localfocusvisual" frameborder="0" style="width:95%;height:550px;overflow:hidden" src="https://localfocus2.appspot.com/5e7763bc674d8"></iframe>
-  <p>Source: CPRC Kebangsaan, KKM</p><br>
+  <p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
 	</center>
 <footer class="site-footer">
             <div class="container">
