--- a/covid2019.html
+++ b/covid2019.html
@@ -39,11 +39,11 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
 <br>
 	  <div class="container-fluid">
   <div class="row">
-    <div class="col" style="background-color:lavender;">
+    <div class="col-sm-3 col-md-6" style="background-color:lavender;">
     <iframe title="Updated: CoVID-19 in Malaysia by States" aria-label="Dot Plot" id="datawrapper-chart-AT19Z" src="//datawrapper.dwcdn.net/AT19Z/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="415"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 </script></div>
     
-    <div class="col" style="background-color:white;">
+    <div class="col-sm-3 col-md-6" style="background-color:white;">
     <iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" id="datawrapper-chart-5Fzxn" src="//datawrapper.dwcdn.net/5Fzxn/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="415"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 </script>
 </div>
