--- a/covid2019.html
+++ b/covid2019.html
@@ -37,7 +37,7 @@ var dt = new Date();
 document.getElementById("datetime").innerHTML = dt.toLocaleString();
 </script>
 	  <center>
-	  <iframe width="95%" height="1850" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></center>
+	  <iframe width="95%" height="auto" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></center>
 <br>
 <div class="container-fluid">
   <div class="row">
