--- a/covid2019.html
+++ b/covid2019.html
@@ -38,7 +38,7 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
 </script>
 	  <center>
 	<div class="embed-responsive embed-responsive-16by9">
-	  <iframe class="embed-responsive-item" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></center>
+	  <iframe width="95%" class="embed-responsive-item" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></center>
 		  </div>
 		  <br>
 <div class="container-fluid">
