--- a/covid2019.html
+++ b/covid2019.html
@@ -37,8 +37,24 @@ var dt = new Date();
 document.getElementById("datetime").innerHTML = dt.toLocaleString();
 </script>
 	  <center>
-	<div class="embed-responsive embed-responsive-16by9">
-	  <iframe width="95%" class="embed-responsive-item" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></center>
+		  <style>
+			 .resp-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+			  .resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+		  </style>
+		  
+	<div class="resp-container">
+	  <iframe class="resp-iframe" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" gesture="media"  allow="encrypted-media" allowfullscreen></iframe></center>
 		  </div>
 		  <br>
 <div class="container-fluid">
