--- a/covid2019.html
+++ b/covid2019.html
@@ -36,25 +36,9 @@
 var dt = new Date();
 document.getElementById("datetime").innerHTML = dt.toLocaleString();
 </script>
-	  <center>
-		  <style>
-			 .resp-container {
-    position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-}
-			  .resp-iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-}
-		  </style>
-		  
-	<div class="resp-container">
-	  <iframe class="resp-iframe" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" gesture="media"  allow="encrypted-media" allowfullscreen></iframe></center>
+	  <center>  
+	<div>
+	  <iframe class="iframe_fullHeight" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M"></iframe></center>
 		  </div>
 		  <br>
 <div class="container-fluid">
@@ -153,6 +137,39 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
     </div>
 
     <script src="dist/js/main.min.js"></script>
+	<script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+</script>
+
+<script type="application/javascript" src="/script/jquery.browser.js">
+</script>
+
+<script type="application/javascript" src="/script/jquery-iframe-auto-height.js">
+</script>
+
+<script type="application/javascript"> 
+  jQuery('iframe').iframeAutoHeight();
+  $(window).load(
+      function() {
+          jQuery('iframe').iframeAutoHeight();  
+      }
+  );
+
+  // for when content is not html e.g. a PDF
+  function setIframeHeight() {
+      $('.iframe_fullHeight').each(
+          function (i, item) {
+              item.height = $(document).height();
+          }
+      );
+  };
+
+  $(document).ready( function () {
+      setIframeHeight();
+  });
+  $(window).resize( function () {
+      setIframeHeight();
+  });
+</script> 
 	
 </body>
 </html>
