--- a/covid2019.html
+++ b/covid2019.html
@@ -38,14 +38,14 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
 </script>
 	  <center>  
 	<div>
-	  <iframe width="95%" height="1800" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+	  <iframe width="95%" height="1000" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 		  <br>
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-3 col-md-6">
-      	<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/8/" scrolling="no" frameborder="0" style="border: none;" width="650" height="410"></iframe>
+      	<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/8/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
 	
-	<iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/2/" scrolling="no" frameborder="0" style="border: none;" width="650" height="410"></iframe>
+	<iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
     </div>
   </div>
 </div></center>
