--- a/covid2019.html
+++ b/covid2019.html
@@ -38,7 +38,7 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
 </script>
 	  <center>  
 	<div>
-	  <iframe width="95%" height="1000" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+	  <iframe width="95%" height="600" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 		  <br>
 <div class="container-fluid">
   <div class="row">
@@ -50,7 +50,7 @@ document.getElementById("datetime").innerHTML = dt.toLocaleString();
   </div>
 </div></center>
 	  <br><center>
-	  <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+	  <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 	  <br><h3>Heatmap CoViD-19 Malaysia by States</h3>
   <iframe width="95%" height="604" src="//jsfiddle.net/booluckgmie/8ptgj6yr/8/embedded/result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 	  <p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
