--- a/covid2019.html
+++ b/covid2019.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="utf-8">
+<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>UKK DOSM | Sharing Section</title>
+	<title>UKK DOSM | CoViD-19 Malaysia by States</title>
 	<meta name="google-site-verification" content="_ZFlJ_IYYRz4EYs7ZjIOuVs6RcAr05AZ_wwPbMgeyf4" />  
 	<meta name="description" content="Sharing Section, blog, ukk dosm">
 	<meta property="og:title" content="UKK DOSM" />
@@ -29,121 +29,125 @@
 
   gtag('config', 'UA-155273911-1');
 </script>
-  <center>
-  <h2>CoViD-19 Malaysia by States</h2>
-	  <p>[STATS: <span id="datetime"></span>]</p>
-<script>
-var dt = new Date();
-document.getElementById("datetime").innerHTML = dt.toLocaleString();
-</script>
-	  <center>  
-	<div>
-	  <iframe width="95%" height="650" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></div>
-		  <br>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-3 col-md-6">
-      	<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/8/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
-	
-	<iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
-    </div>
-  </div>
+<style>
+* {box-sizing: border-box}
+
+/* Set height of body and the document to 100% */
+body, html {
+  height: 80%;
+  margin: 0;
+  font-family: Arial;
+}
+
+/* Style tab links */
+.tablink {
+  background-color: #555;
+  color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
+}
+
+.tablink:hover {
+  background-color: #777;
+}
+
+/* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+  color: black;
+  display: none;
+  padding: 100px 20px;
+  height: 80%;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+
+#Home {background-color: white;}
+#News {background-color: white;}
+#Contact {background-color: white;}
+#About {background-color: white;}
+
+</style>
+</head>
+<body>
+<center>
+<img src="https://lh3.googleusercontent.com/-x-L9EWxqaFc/XnwyFowBBQI/AAAAAAAA1y0/ftsH7pyIwFUkoTSO2DtWuj1wDDmB-9RvQCK8BGAsYHg/s0/2020-03-25.png" alt="BannerCovid-19ENG" width="100%" >
+<br>
+</center>
+<button class="tablink" onclick="openPage('Home', this, 'purple')" id="defaultOpen" >Overview</button>
+<button class="tablink" onclick="openPage('News', this, 'orange')" >Performance</button>
+<button class="tablink" onclick="openPage('Contact', this, 'blue')">Interactive</button>
+<button class="tablink" onclick="openPage('About', this, 'red')">Maps</button>
+
+<div id="Home" class="tabcontent">  
+  <center><iframe width="95%" height="1700" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 </div></center>
-	  <br><center>
-	  <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-	  <br><h3>Heatmap CoViD-19 Malaysia by States</h3>
+
+<div id="News" class="tabcontent">
+<center><iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/8/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
+		<br>
+		<iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
+</div></center>
+
+<div id="Contact" class="tabcontent">
+    <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+</div>
+
+<div id="About" class="tabcontent">
+  <center><h3>Heatmap CoViD-19 Malaysia by States</h3>
   <iframe width="95%" height="604" src="//jsfiddle.net/booluckgmie/8ptgj6yr/8/embedded/result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 	  <p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
   <iframe class="localfocusvisual" frameborder="0" style="width:95%;height:550px;overflow:hidden" src="https://localfocus2.appspot.com/5e7763bc674d8"></iframe>
   <p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
 	</center>
-<footer class="site-footer">
-            <div class="container">
-                <div class="site-footer-inner has-top-divider">
-                    <div class="brand footer-brand">
-                        <a href="#">
-							<svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
-								<title>UKK DOSM | Sharing Section</title>
-								<defs>
-									<linearGradient x1="114.674%" y1="39.507%" x2="-52.998%" y2="39.507%" id="logo-footer-a">
-										<stop stop-color="#8D92FA" offset="0%"/>
-										<stop stop-color="#8D92FA" stop-opacity="0" offset="100%"/>
-									</linearGradient>
-									<linearGradient x1="93.05%" y1="19.767%" x2="15.034%" y2="85.765%" id="logo-footer-b">
-										<stop stop-color="#FF3058" offset="0%"/>
-										<stop stop-color="#FF6381" offset="100%"/>
-									</linearGradient>
-									<linearGradient x1="32.716%" y1="-20.176%" x2="32.716%" y2="148.747%" id="logo-footer-c">
-										<stop stop-color="#FF97AA" offset="0%"/>
-										<stop stop-color="#FF97AA" stop-opacity="0" offset="100%"/>
-									</linearGradient>
-								</defs>
-								<g fill="none" fill-rule="evenodd">
-									<path d="M31.12 7.482C28.327 19.146 19.147 28.326 7.483 31.121A12.04 12.04 0 0 1 .88 24.518C3.674 12.854 12.854 3.674 24.518.879a12.04 12.04 0 0 1 6.603 6.603z" fill="#312ECA"/>
-									<path d="M28.874 3.922l-24.91 24.99a12.026 12.026 0 0 1-3.085-4.394C3.674 12.854 12.854 3.674 24.518.879a12.025 12.025 0 0 1 4.356 3.043z" fill="url(#logo-footer-a)"/>
-									<g opacity=".88">
-										<path d="M31.12 24.518a12.04 12.04 0 0 1-6.602 6.603C12.854 28.326 3.674 19.146.879 7.482A12.04 12.04 0 0 1 7.482.88c11.664 2.795 20.844 11.975 23.639 23.639z" fill="url(#logo-footer-b)"/>
-										<path d="M24.518 31.12C12.854 28.327 3.674 19.147.879 7.483A12.015 12.015 0 0 1 3.46 3.57L28.47 28.5a12.016 12.016 0 0 1-3.951 2.62z" fill="url(#logo-footer-c)"/>
-									</g>
-								</g>
-							</svg>
-                        </a>
-                    </div>
-                    <ul class="footer-links list-reset">
-                        <li>
-                            <a href="#">Contact</a>
-                        </li>
-                        <li>
-                            <a href="#">About us</a>
-                        </li>
-                        <li>
-                            <a href="#">FAQ's</a>
-                        </li>
-                        <li>
-                            <a href="#">Support</a>
-                        </li>
-                    </ul>
-                    <ul class="footer-social-links list-reset">
-                        <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Facebook</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M6.023 16L6 9H3V6h3V4c0-2.7 1.672-4 4.08-4 1.153 0 2.144.086 2.433.124v2.821h-1.67c-1.31 0-1.563.623-1.563 1.536V6H13l-1 3H9.28v7H6.023z" fill="#FFF"/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Twitter</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z" fill="#FFF"/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="screen-reader-text">Google</span>
-                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z" fill="#FFF"/>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                    <div class="footer-copyright">&copy; UKK DOSM Copyright © 2020.</div>
-                </div>
-            </div>
-        </footer>
-    </div>
+</div>
 
-    <script src="dist/js/main.min.js"></script>
-	<script type="application/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+<script>
+function openPage(pageName,elmnt,color) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablink");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].style.backgroundColor = "";
+  }
+  document.getElementById(pageName).style.display = "block";
+  elmnt.style.backgroundColor = color;
+}
+
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
 </script>
 
-<script type="application/javascript" src="/script/jquery.browser.js">
-</script>
+<style>
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: #ddd;
+   color: white;
+   text-align: center;
+}
 
-<script type="application/javascript" src="/script/jquery-iframe-auto-height.js">
-</script>
-	
+</style>
+
+<div class="footer">
+  <p>Created by ©UKK DOSM Copyright © 2020.</p>
+</div>
 </body>
-</html>
+</html> 
