--- a/covid2019.html
+++ b/covid2019.html
@@ -146,7 +146,7 @@ document.getElementById("defaultOpen").click();
 </style>
 
 <div class="footer">
-  <p>Created by ©UKK DOSM Copyright © 2020.</p>
+  <br><p style="font-size:14px"> Created by ©UKK DOSM Copyright © 2020.</p>
 </div>
 </body>
 </html> 
