--- a/covid2019.html
+++ b/covid2019.html
@@ -86,7 +86,7 @@ body, html {
 <img src="https://lh3.googleusercontent.com/-x-L9EWxqaFc/XnwyFowBBQI/AAAAAAAA1y0/ftsH7pyIwFUkoTSO2DtWuj1wDDmB-9RvQCK8BGAsYHg/s0/2020-03-25.png" alt="BannerCovid-19ENG" width="100%" >
 </center>
 <button class="tablink" onclick="openPage('Home', this, 'purple')" id="defaultOpen" >Overview</button>
-<button class="tablink" onclick="openPage('News', this, 'orange')" >Performance</button>
+<button class="tablink" onclick="openPage('News', this, 'orange')" >Cases</button>
 <button class="tablink" onclick="openPage('Contact', this, 'blue')">Interactive</button>
 <button class="tablink" onclick="openPage('About', this, 'red')">Maps</button>
 
@@ -95,10 +95,10 @@ body, html {
 </div></center>
 
 <div id="News" class="tabcontent">
-<center><iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/8/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
-		<br>
-		<iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
-</div></center>
+<center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/3/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
+<br>
+	</div><iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/9/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
+	</center>
 
 <div id="Contact" class="tabcontent">
     <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
