--- a/covid2019.html
+++ b/covid2019.html
@@ -95,21 +95,24 @@ body, html {
 </div></center>
 
 <div id="News" class="tabcontent">
-<center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/3/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
-<br>
-	</div><iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/9/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
-	</center>
+<center>
+	<iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/3/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe><br>
 
+	<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/9/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
+	</center>
+</div>
+	
 <div id="Contact" class="tabcontent">
     <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 </div>
 
 <div id="About" class="tabcontent">
   <center><h3>Heatmap CoViD-19 Malaysia by States</h3>
-  <iframe width="95%" height="604" src="//jsfiddle.net/booluckgmie/8ptgj6yr/8/embedded/result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
+	  <iframe width="95%" height="604" src="//jsfiddle.net/booluckgmie/8ptgj6yr/8/embedded/result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 	  <p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
-  <iframe class="localfocusvisual" frameborder="0" style="width:95%;height:550px;overflow:hidden" src="https://localfocus2.appspot.com/5e7763bc674d8"></iframe>
-  <p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
+  
+	  <iframe class="localfocusvisual" frameborder="0" style="width:95%;height:550px;overflow:hidden" src="https://localfocus2.appspot.com/5e7763bc674d8"></iframe>
+  	<p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
 	</center>
 </div>
 
