--- a/covid2019.html
+++ b/covid2019.html
@@ -95,12 +95,11 @@ body, html {
 </div></center>
 
 <div id="News" class="tabcontent">
-<center>
-	<iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/3/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe><br>
-
-	<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/9/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
-	</center>
-</div>
+<center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
+		<br>
+		<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/8/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
+			
+</center></div>
 	
 <div id="Contact" class="tabcontent">
     <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
