--- a/covid2019.html
+++ b/covid2019.html
@@ -102,7 +102,8 @@ body, html {
 </center></div>
 	
 <div id="Contact" class="tabcontent">
-    <div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+    <p>By Amerudin Abdul Ghani on 25 Mar 2020</p><br>
+	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 </div>
 
 <div id="About" class="tabcontent">
