--- a/covid2019.html
+++ b/covid2019.html
@@ -102,7 +102,7 @@ body, html {
 </center></div>
 	
 <div id="Contact" class="tabcontent">
-    <p>By Amerudin Abdul Ghani on 25 Mar 2020</p><br>
+    <center><p>By Amerudin Abdul Ghani on 25 Mar 2020</p></center>
 	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 </div>
 
