--- a/covid2019.html
+++ b/covid2019.html
@@ -103,7 +103,7 @@ body, html {
 	
 <div id="Contact" class="tabcontent">
     <center><p>By Amerudin Abdul Ghani on 25 Mar 2020</p></center>
-	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div><br>
 </div>
 
 <div id="About" class="tabcontent">
