--- a/covid2019.html
+++ b/covid2019.html
@@ -111,7 +111,7 @@ body, html {
 	  <iframe width="95%" height="604" src="//jsfiddle.net/booluckgmie/8ptgj6yr/8/embedded/result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 	  <p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
   
-	  <iframe class="localfocusvisual" frameborder="0" style="width:95%;height:550px;overflow:hidden" src="https://localfocus2.appspot.com/5e7763bc674d8"></iframe>
+	  <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia states Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
   	<p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
 	</center>
 </div>
