--- a/covid2019.html
+++ b/covid2019.html
@@ -98,7 +98,8 @@ body, html {
 <center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/4/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
 		<br>
 		<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/8/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
-			
+<br>
+		<iframe title="No. of Death Patients by States" aria-label="Malaysia states choropleth map" src="//datawrapper.dwcdn.net/jIvaG/1/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>			
 </center></div>
 	
 <div id="Contact" class="tabcontent">
