--- a/covid2019.html
+++ b/covid2019.html
@@ -95,16 +95,17 @@ body, html {
 </div></center>
 
 <div id="News" class="tabcontent">
-<center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/4/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
+<center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/4/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 		<br>
-		<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/8/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>
+		<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/8/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 <br>
-		<iframe title="No. of Death Patients by States" aria-label="Malaysia states choropleth map" src="//datawrapper.dwcdn.net/jIvaG/1/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="410"></iframe>			
+		<iframe title="No. of Death Patients by States" aria-label="Malaysia states choropleth map" src="//datawrapper.dwcdn.net/jIvaG/1/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
+<br><br>
 </center></div>
 	
 <div id="Contact" class="tabcontent">
     <center><p>By Amerudin Abdul Ghani on 25 Mar 2020</p></center>
-	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script></div><br>
+	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script><br><br></div>
 </div>
 
 <div id="About" class="tabcontent">
@@ -113,7 +114,7 @@ body, html {
 	  <p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
   
 	  <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia states Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
-  	<p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br>
+  	<p>Source: CPRC Kebangsaan, KKM on 21/03/2020</p><br><br>
 	</center>
 </div>
 
