--- a/covid-19.html
+++ b/covid-19.html
@@ -151,7 +151,7 @@ document.getElementById("defaultOpen").click();
 </style>
 
 <div class="footer">
-  <br><p style="font-size:14px"> Created by ©UKK DOSM Copyright © 2020.</p>
+  <p style="font-size:14px"> Created by ©UKK DOSM Copyright © 2020.</p>
 </div>
 </body>
 </html> 
