--- a/covid-19.html
+++ b/covid-19.html
@@ -104,8 +104,8 @@ body, html {
 </center></div>
 	
 <div id="Contact" class="tabcontent">
-    <center><p>By Amerudin Abdul Ghani on 25 Mar 2020</p></center>
-	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script><br><br></div>
+    <center>
+	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script><br><p>by Amerudin Abdul Ghani, BPPD</p></center><br></div>
 </div>
 
 <div id="About" class="tabcontent">
