--- a/covid-19.html
+++ b/covid-19.html
@@ -105,7 +105,7 @@ body, html {
 	
 <div id="Contact" class="tabcontent">
     <center>
-	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script><br><p>by Amerudin Abdul Ghani, BPPD</p></center><br></div>
+	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script><br><p style="font-size:14px"><p>by Amerudin Abdul Ghani, BPPD</p></center><br></div>
 </div>
 
 <div id="About" class="tabcontent">
