--- a/covid-19.html
+++ b/covid-19.html
@@ -105,8 +105,8 @@ body, html {
 	
 <div id="Contact" class="tabcontent">
     <center>
-	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script><br><br></div>
-</div><p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p></center>
+	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1663278"><script src="https://public.flourish.studio/resources/embed.js"></script><p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p><br><br></div>
+</div></center>
 
 <div id="About" class="tabcontent">
   <center><h3>Heatmap CoViD-19 Malaysia by States</h3>
