--- a/covid-19.html
+++ b/covid-19.html
@@ -99,7 +99,7 @@ body, html {
 		<br>
 		<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/10/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 <br>
-		<iframe title="No. of Death Patients by States" aria-label="Malaysia states choropleth map" src="//datawrapper.dwcdn.net/jIvaG/3/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
+		<iframe title="No. of Death Patients by States" aria-label="Malaysia state choropleth map" src="//datawrapper.dwcdn.net/jIvaG/3/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 <br><br>
 </center></div>
 	
@@ -113,7 +113,7 @@ body, html {
 	  <iframe width="95%" height="604" src="//jsfiddle.net/booluckgmie/8ptgj6yr/8/embedded/result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 	  <p>Source: CPRC Kebangsaan, KKM on 25/03/2020</p><br>
   
-	  <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia states Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
+	  <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia state Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
   	<p>Source: CPRC Kebangsaan, KKM on 25/03/2020</p><br><br>
 	</center>
 </div>
