--- a/covid-19.html
+++ b/covid-19.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>UKK DOSM | CoViD-19 Malaysia by States</title>
+	<title>UKK DOSM | CoViD-19 Malaysia by State</title>
 	<meta name="google-site-verification" content="_ZFlJ_IYYRz4EYs7ZjIOuVs6RcAr05AZ_wwPbMgeyf4" />  
 	<meta name="description" content="Sharing Section, blog, ukk dosm">
 	<meta property="og:title" content="UKK DOSM" />
@@ -97,9 +97,9 @@ body, html {
 <div id="News" class="tabcontent">
 <center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/6/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 		<br>
-		<iframe title="CoVID-19 in Malaysia by States" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/10/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
+		<iframe title="CoVID-19 in Malaysia by State" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/10/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 <br>
-		<iframe title="No. of Death Patients by States" aria-label="Malaysia state choropleth map" src="//datawrapper.dwcdn.net/jIvaG/3/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
+		<iframe title="No. of Death Patients by State" aria-label="Malaysia state choropleth map" src="//datawrapper.dwcdn.net/jIvaG/3/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 <br><br>
 </center></div>
 	
@@ -109,7 +109,7 @@ body, html {
 </div></center>
 
 <div id="About" class="tabcontent">
-  <center><h3>Heatmap CoViD-19 Malaysia by States</h3>
+  <center><h3>Heatmap CoViD-19 Malaysia by State</h3>
 	  <iframe width="95%" height="604" src="//jsfiddle.net/booluckgmie/8ptgj6yr/8/embedded/result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 	  <p>Source: CPRC Kebangsaan, KKM on 25/03/2020</p><br>
   
