--- a/covid-19.html
+++ b/covid-19.html
@@ -99,11 +99,9 @@ body, html {
 		<br>
 		<iframe title="CoVID-19 in Malaysia by State" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/12/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 <br>
-		<iframe title="No. of Death Patients by State" aria-label="Malaysia state choropleth map" src="//datawrapper.dwcdn.net/jIvaG/4/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
-<br>
-	<iframe width="95%" height="1800" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<iframe width="100%" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
 <br><br>
-</center></div>
+</center><br></div><br><br>
 	
 <div id="Contact" class="tabcontent">
     <center>
