--- a/covid-19.html
+++ b/covid-19.html
@@ -110,7 +110,7 @@ body, html {
 
 <div id="About" class="tabcontent">
   <center><h3>Heatmap CoViD-19 Malaysia by State</h3>
-	  <iframe width="95%" height="604" src="//jsfiddle.net/booluckgmie/8ptgj6yr/8/embedded/result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
+	  <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/heatmap-covid.html" frameborder="0" style="border:0" allowfullscreen></iframe>
 	  <p>Source: CPRC Kebangsaan, KKM on 25/03/2020</p><br>
   
 	  <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia state Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
