--- a/covid-19.html
+++ b/covid-19.html
@@ -109,12 +109,12 @@ body, html {
 </div></center>
 
 <div id="About" class="tabcontent">
-  <center><h3>Heatmap CoViD-19 Malaysia by State</h3>
+  <center><h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
 	  <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/heatmap-covid.html" frameborder="0" style="border:0" allowfullscreen></iframe>
-	  <p>Source: CPRC Kebangsaan, KKM on 25/03/2020</p><br>
+	  <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>
   
 	  <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia state Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
-  	<p>Source: CPRC Kebangsaan, KKM on 25/03/2020</p><br><br>
+  	<p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br><br>
 	</center>
 </div>
 
