--- a/covid-19.html
+++ b/covid-19.html
@@ -88,16 +88,16 @@ body, html {
 <button class="tablink" onclick="openPage('Home', this, 'purple')" id="defaultOpen" >Overview</button>
 <button class="tablink" onclick="openPage('News', this, 'orange')" >Cases</button>
 <button class="tablink" onclick="openPage('Contact', this, 'blue')">Interactive</button>
-<button class="tablink" onclick="openPage('About', this, 'red')">Maps</button>
+<button class="tablink" onclick="openPage('About', this, 'red')">World View</button>
 
 <div id="Home" class="tabcontent">  
   <center><iframe width="95%" height="1800" src="https://datastudio.google.com/embed/reporting/cfca4946-cfc8-4fb4-804f-bb58aa6c35ca/page/1M" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 </div></center>
 
 <div id="News" class="tabcontent">
-<center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/12/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
+<center><iframe title="CoViD-19 Cases Performance" aria-label="Line Chart" src="//datawrapper.dwcdn.net/5Fzxn/13/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 		<br>
-		<iframe title="CoVID-19 in Malaysia by State" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/17/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
+		<iframe title="CoVID-19 in Malaysia by State" aria-label="Interactive line chart" src="//datawrapper.dwcdn.net/AT19Z/18/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="600"></iframe>
 <br>
 		<iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/HC-malaysia.html" frameborder="0" style="border:0" allowfullscreen></iframe>
 
@@ -107,8 +107,6 @@ body, html {
     <center>
 	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1720717"><script src="https://public.flourish.studio/resources/embed.js"></script><p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p></div>
 </div></center>
-
-<div id="About" class="tabcontent">
   <center><h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
 	  <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/heatmap-covid.html" frameborder="0" style="border:0" allowfullscreen></iframe>
 	  <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>
@@ -116,6 +114,8 @@ body, html {
 	  <iframe title="Reported patient location CoVID-19 in Malaysia" aria-label="Malaysia state Symbol map" src="//datawrapper.dwcdn.net/tcfj8/2/" scrolling="no" frameborder="0" style="border: none;" width="95%" height="604"></iframe>
   	<p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br><br>
 	</center>
+<div id="About" class="tabcontent">
+	<iframe width="100%" height="3400" src="https://datastudio.google.com/embed/reporting/f56febd8-5c42-4191-bcea-87a3396f4508/page/GQFJB" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
 <script>
