--- a/covid-19.html
+++ b/covid-19.html
@@ -368,8 +368,11 @@ body {
 	
 <div id="Contact" class="tabcontent">
     <center>
-	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1720717"><script src="https://public.flourish.studio/resources/embed.js"></script><p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p></div>
-  <center><h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
+	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1810094"><script src="https://public.flourish.studio/resources/embed.js"></script><p style="font-size:14px">by Amerudin Abdul Ghani, BPPD</p></div>
+	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777563"><script src="https://public.flourish.studio/resources/embed.js"></script><p style="font-size:14px"</div>
+	<div width="95%" class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1777629"><script src="https://public.flourish.studio/resources/embed.js"></script><p style="font-size:14px"</div>
+  
+	    <center><h3>Heatmap CoViD-19 Cases Reported in Malaysia</h3>
 	  <iframe width="100%" height="600" src="https://ukkdosm.github.io/maps/heatmap-covid.html" frameborder="0" style="border:0" allowfullscreen></iframe>
 	  <p style="font-size:14px">Source: Crisis Preparedness and Response Centre, KKM.</p><br>
   
