--- a/covid-19.html
+++ b/covid-19.html
@@ -382,8 +382,7 @@ body {
 	    </div></center>
 
 <div id="About" class="tabcontent">
-	<iframe width="100%" height="3400" src="https://datastudio.google.com/embed/reporting/f56febd8-5c42-4191-bcea-87a3396f4508/page/GQFJB" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
+	<center><iframe width="95%" height="3400" src="https://datastudio.google.com/embed/u/0/reporting/f56febd8-5c42-4191-bcea-87a3396f4508/page/GQFJB" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 
 <script>
 function openPage(pageName,elmnt,color) {
